crates/laplace-macro/tests/ui/fail/verify_unknown_arg.rs
// SPDX-License-Identifier: Apache-2.0

#[laplace_macro::laplace_verify(threads = 1, threds = 2)]
async fn unknown_arg() {}

fn main() {}
