crates/laplace-macro/tests/ui/fail/verify_unknown_arg.stderr
error: unknown argument `threds` for `#[laplace_sdk::verify]`; valid keys: scenario, threads, name, expected, determinism, write_ard, output_dir, buffer, max_depth
 --> tests/ui/fail/verify_unknown_arg.rs:3:46
  |
3 | #[laplace_macro::laplace_verify(threads = 1, threds = 2)]
  |                                              ^^^^^^^^^^
